# MIPSSuperscalarSimulator

./: CMakeLists.txt
Benchmarks/: Unrolling.asm  add_reg_1.asm  alu_reg_1.asm  alu_reg_2.asm  alu_reg_3.asm  array.asm  benchmark1.asm  benchmark_1.asm  benchmark_4.asm  benchmark_6.asm  big_test.asm  branch_1.asm  branch_2.asm  ex-mem_to_ex_1.asm  ex-mem_to_ex_2.asm  ex-mem_to_ex_3.asm  forwarding.asm  ld_addr_ex-mem_ex.asm  ld_addr_ex-wb_ex.asm  ld_addr_ex-wb_mem.asm  load_delay_1.asm  load_delay_2.asm  load_delay_3.asm  load_reg_1.asm  load_reg_2.asm  load_reg_3.asm  matrix(SuperScalar).asm  mem-to-ex.asm  mem-wb_to_ex1.asm  mem-wb_to_ex2.asm  mem-wb_to_ex3.asm  mem-wb_to_ex4.asm  mem-wb_to_ex5.asm  mem-wb_to_ex6.asm  mem_move.asm  mult.asm  st_addr_ex-mem_ex.asm  st_addr_mem-wb_ex.asm  st_mem-wb_mem.asm  wb-to-ex.asm
MIPSSuperscalarSimulator/: .cproject  .project  AllStage.cpp  AllStage.hpp  BufferToggle.hpp  Decode.cpp  Decode.hpp  DecodeStage.cpp  DecodeStage.hpp  Execute.cpp  Execute.hpp  ExecuteStage.cpp  ExecuteStage.hpp  Fetch.cpp  Fetch.hpp  FetchStage.cpp  FetchStage.hpp  Forwarding.cpp  Forwarding.hpp  Instruction.cpp  Instruction.hpp  InstructionParser.cpp  InstructionParser.hpp  InstructionType.cpp  InstructionType.hpp  LabelInstruction.cpp  LabelInstruction.hpp  MainMemory.cpp  MainMemory.hpp  Memory.cpp  Memory.hpp  MemoryStage.cpp  MemoryStage.hpp  PipelineStage.cpp  PipelineStage.hpp  RegisterFile.cpp  RegisterFile.hpp  SimulatedInstruction.cpp  SimulatedInstruction.hpp  SimulationInstruction.cpp  (+12 more)
MIPSSuperscalarSimulator.xcodeproj/: project.pbxproj
(+43 files in other folders)
