CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(simulator)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

FILE(GLOB_RECURSE simulator_SOURCES ${CMAKE_CURRENT_LIST_DIR}/MIPSSuperscalarSimulator/*.cpp)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/MIPSSuperscalarSimulator)

ADD_EXECUTABLE(simulator ${simulator_SOURCES})
